--- a/src/backend/.env
+++ b/src/backend/.env
@@ -3,3 +3,4 @@ CLOUDINARY_API_KEY = "698111622772728"
 CLOUDINARY_API_SECRET = "fJyE7Co9BwINxnQc0A9XRi_10kU"
 CLOUDINARY_NAME = "doczh3ul5"
 SECRET_KEY = "kienhieuvip"
+PORT=4000
