--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "nodemailer": "^6.9.15",
     "rc-slider": "^11.1.5",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
