--- a/src/backend/.env
+++ b/src/backend/.env
@@ -1,6 +1,8 @@
-MONGODB_URL = 'mongodb+srv://gunski01:kien12345@mindx-fullstack.ckive.mongodb.net/Web-82?retryWrites=true&w=majority&appName=MindX-fullstack'
-CLOUDINARY_API_KEY = "698111622772728"
-CLOUDINARY_API_SECRET = "fJyE7Co9BwINxnQc0A9XRi_10kU"
-CLOUDINARY_NAME = "doczh3ul5"
-SECRET_KEY = "kienhieuvip"
-PORT=4000
+MONGODB_URL='mongodb+srv://gunski01:kien12345@mindx-fullstack.ckive.mongodb.net/Web-82?retryWrites=true&w=majority&appName=MindX-fullstack'
+CLOUDINARY_API_KEY='698111622772728'
+CLOUDINARY_API_SECRET='fJyE7Co9BwINxnQc0A9XRi_10kU'
+CLOUDINARY_NAME='doczh3ul5'
+SECRET_KEY='kienhieuvip'
+PORT='3000'
+EMAIL_USER='your_email@gmail.com'
+EMAIL_PASS='your_email_password'
